feat(#247): 카페를 조회하고 수정할 수 있는 기능 구현